# opensearch-sdk-rs

./: .gitignore  Cargo.toml  DEVELOPMENT_NOTES.md  NEXT_STEPS.md  README.md  build.rs  flake.nix  justfile
.github/workflows/: live-hello.yml  nix-cargo-check.yml
examples/hello/: hello.json
resources/: Dockerfile  run.gradle
scripts/: live_hello.sh
src/: ExtensionIdentityProto.proto  ExtensionRequestProto.proto  RegisterRestActionsProto.proto  extension.rs  host.rs  interface.rs  lib.rs  main.rs  proto.rs  rest.rs  stream.rs  transport.rs
tests/: live_hello.rs
