[package]
name = "opensearch-sdk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
nom = "7.1.3"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.12"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
